--- a/07_JavaScript_Projects/random color generator/index.html
+++ b/07_JavaScript_Projects/random color generator/index.html
@@ -25,7 +25,7 @@
 
         // Below if condition is written because we cannot add directly any value to a varibale whose value we had declared as NUll
         // value can be added that's not a prblm but it will create some issues,
-        // so we prefer to add some condition and then use variable
+        // so we prefer to add some condition and then use variable and now we are not over utilizing memory also, so its better approach
 
         if(!intervalID){
             intervalID = setInterval(changeByColour, 1000)   
